--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "polymer": "Polymer/polymer#^1.2.0",
     "paper-input": "PolymerElements/paper-input#^1.1.5",
     "paper-slider": "PolymerElements/paper-slider#^1.0.9",
-    "firebase-element": "GoogleWebComponents/firebase-element#^1.0.11"
+    "firebase-element": "GoogleWebComponents/firebase-element#^1.0.11",
+    "paper-toast": "PolymerElements/paper-toast#^1.1.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
