--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Polymer Starter Kit",
-  "short_name": "Polymer Starter Kit",
+  "name": "Meetup Project",
+  "short_name": "Meetup Project",
   "icons": [{
         "src": "images/touch/icon-72x72.png",
         "sizes": "72x72",
